# fastinference

./: .gitignore  LICENSE  README.md  environment.yml  setup.py
.github/workflows/: docs.yml  test-linear.yml  test-nn.yml  test-trees.yml  tests.yml
.github/workflows/disabled/: test-dt-pi0.yml  test-dt-pi3.yml  test-dt.yml  test-linear-pi0.yml  test-linear-pi3.yml  test-linear.yml  test-nn.yml  test-qda-pi0.yml  test-qda-pi3.yml  test-qda.yml
docs/: conf.py  ensemble.rst  extending.rst  index.rst  linear.rst  neuralnet.rst  tree.rst
docs/html/: .buildinfo  discriminant.html  ensemble.html  extending.html  genindex.html  implementations.html  index.html  linear.html  models.html  neuralnet.html  objects.inv  py-modindex.html  search.html  searchindex.js  tree.html
docs/html/_sources/: discriminant.rst.txt  ensemble.rst.txt  extending.rst.txt  implementations.rst.txt  index.rst.txt  models.rst.txt  tree.rst.txt
docs/html/_static/: custom.css
fastinference/: Loader.py  Util.py  main.py
fastinference/implementations/ensemble/cpp/: implement.py
fastinference/implementations/linear/cpp/: header.j2  implement.py
fastinference/models/: DiscriminantAnalysis.py  Ensemble.py  Linear.py  Model.py  Tree.py
fastinference/models/nn/: Activations.py  AveragePool.py  BatchNorm.py  Conv2D.py  Gemm.py  Layer.py  MaxPool.py  Mul.py  NeuralNet.py  Reshape.py
fastinference/optimizers/ensemble/: leaf-refinement-pytorch.py  leaf-refinement.py  merge-linear.py  proxpruning.py  pruning.py  quantize.py  weight-refinement-pytorch.py  weight-refinement.py
fastinference/optimizers/neuralnet/: merge_nodes.py  remove_nodes.py
fastinference/optimizers/tree/: quantize.py  swap.py
tests/: CMakeLists.txt  main.cpp  run_test.sh  test_cnn.py  test_linear.py  test_mlp.py  test_trees.py  test_utils.py  train_cnn.py  train_discriminant.py  train_linear.py  train_mlp.py  train_tree.py
tests/data/: convert_data.py  generate_data.py  generate_mnist.py
(+100 files in other folders)
